--- a/src/pages/Board/style.scss
+++ b/src/pages/Board/style.scss
@@ -11,7 +11,6 @@
 
     h1 {
       font-weight: 600;
-      color: $primary-text-color;
       letter-spacing: 1px;
       font-size: 26px;
       margin: 0;
